change back color

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
+<head>
+<style>
+body{
+color:ping;}
+</style>
+</head>
+<body>
 <h1>this is dummy file</h1>
 <h2>from file</h2>
+</body>
 </html>
